team page alignment fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@
 
 @media (max-width: 480px) {
   html {
-    font-size: 11px;
+    font-size: 10px;
   }
 }
 
