--- a/css/teampage.css
+++ b/css/teampage.css
@@ -13,6 +13,7 @@ article {
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    align-items: stretch;
 }
 
 .card {
